--- a/404.html
+++ b/404.html
@@ -7,9 +7,12 @@ permalink: /404.html
 <div style="
     position: relative;
     padding-bottom: 100%;
-    padding-top: 30px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
     height: 0;
     overflow: auto; 
+    width: 600px;
     -webkit-overflow-scrolling:touch; //<<--- THIS IS THE KEY 
     border: solid black 1px;
     ">
