--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ permalink: /404.html
     margin-right: auto;
     height: 0;
     overflow: auto; 
-    width: 600px;
+    max-width: 600px;
     -webkit-overflow-scrolling:touch; //<<--- THIS IS THE KEY 
     border: solid black 1px;
     ">
