--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@ permalink: /404.html
     position: relative;
     padding-bottom: 100%;
     margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
+    /*margin-left: auto;
+    margin-right: auto;*/
     height: 0;
     overflow: auto; 
-    max-width: 600px;
+    /*max-width: 600px;*/
     -webkit-overflow-scrolling:touch; //<<--- THIS IS THE KEY 
     border: solid black 1px;
     ">
