--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@ layout: default
     </article>
   {% endfor %}
   <!-- / article -->
-    <nav class="blocks blocks--space">
-        <span class="align-right">
-          <a href="/archive/">more</a>
-        </span>
-    </nav>
+    <span class="article__align-right">
+      <a href="/archive/">more</a>
+    </span>
 
     <!-- <nav class="blocks blocks--space">
       <div class="blocks__item">
