--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ layout: default
     <span class="article__align-right">
       <a href="/archive/">more</a>
     </span>
+    <div id="kiana-id" class="kiana">
+      <div class="kianaImgDiv">
+        <img id="kianaImg" src="photos/kiana-1.png">
+      </div>
+    </div>
 
     <!-- <nav class="blocks blocks--space">
       <div class="blocks__item">
