--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
     </span>
     <div id="kiana-id" class="kiana">
       <div class="kianaImgDiv">
-        <img id="kianaImg" src="photos/kiana-1.png">
+        <img id="kianaImg" src="photos/Bulbasaur.png">
       </div>
     </div>
 
