fix:drag_smoothly

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ layout: default
         <img id="kianaImg" src="photos/Bulbasaur.png">
       </div>
     </div>
+    <div id="maskLayer"></div>
 
     <!-- <nav class="blocks blocks--space">
       <div class="blocks__item">
