--- a/index.html
+++ b/index.html
@@ -38,12 +38,6 @@ layout: default
     <span class="article__align-right">
       <a href="/archive/">more</a>
     </span>
-    <div id="kiana-id" class="kiana">
-      <div class="kianaImgDiv">
-        <img id="kianaImg" src="photos/Bulbasaur.png">
-      </div>
-    </div>
-    <div id="maskLayer"></div>
 
     <!-- <nav class="blocks blocks--space">
       <div class="blocks__item">
@@ -56,3 +50,4 @@ layout: default
         {% if paginator.next_page %}<a href="{{ paginator.next_page_path }}">Next</a>{% endif %}
       </div>
     </nav> -->
+    {% include bulbasaur.html %}
